<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/modSpinner"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/biljkeRV"
        android:layout_width="match_parent"
        android:layout_height="474dp" />

    <Button
        android:id="@+id/novaBiljkaBtn"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:text="Nova Biljka" />

</LinearLayout>